[package]
name = "rhex"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "A rudimentary hex editor"
license = "MIT"
repository = "https://github.com/osa1/rhex"

[dependencies]
libc = "0.2"
nix = "0.9"
term_input = "0.1"
termbox_simple = "0.2.0"

[profile.release]
lto = true
